# catalog-week3-assignment

./: .env  .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  state.rs
src/db/: base_db.rs  depth_db.rs  mod.rs
src/error/: mod.rs
src/handlers/: data_handler.rs  depth_handler.rs  mod.rs
src/jobs/: mod.rs
src/models/: collection_type.rs  depth_model.rs  earnings_model.rs  mod.rs  query_params.rs  runepools_model.rs  swaps_model.rs
src/routes/: depth_history.rs  mod.rs
src/scheduler/: mod.rs
src/schema/: mod.rs
src/services/: data_service.rs  depth_service.rs  mod.rs
src/utils/: config.rs  date_utils.rs  group_stage.rs  match_stage.rs  mod.rs  pagination.rs  serialization_utils.rs  server.rs  sort_stage.rs
