[package]
name = "catalog-week3-assignment"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.0", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
futures-util = "0.3"

[dev-dependencies]
pretty_assertions = "1"
