[package]
name = "catalog-week3-assignment"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]

axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"

[dev-dependencies]
pretty_assertions = "1"
