[package]
name = "midgard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
mongodb = "2.8"                                       # Remove features
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
bson = { version = "2.8", features = ["chrono-0_4"] }
